deploy/kustomize/istio/patches/policy-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-policy
spec:
  mtls:
    mode: PERMISSIVE # Change to STRICT when all services are migrated
